# PINGU

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml
configs/geometry/: pentagon_5rx.yaml
configs/scenarios/: example_sweep.yaml
configs/training/: amc_baseline.yaml
notebooks/: 01_signal_generation.ipynb  02_channelizer.ipynb  03_detection_classification.ipynb  04_tdoa_estimation.ipynb  05_kalman_integration.ipynb  06_position_solving.ipynb  07_end_to_end_pipeline.ipynb
scripts/: generate_synthetic.py  run_pipeline.py  run_scenarios.py  train_amc.py
src/pingu/: __init__.py  config.py  constants.py  types.py
src/pingu/channelizer/: __init__.py  base.py  fft.py  polyphase.py
src/pingu/classifier/: __init__.py  dataset.py  inference.py  lightning_module.py
src/pingu/detector/: __init__.py  energy.py
src/pingu/integrator/: __init__.py  convergence.py  kalman.py
src/pingu/locator/: __init__.py  cost_functions.py  geometry.py  posterior.py  solvers.py
src/pingu/pipeline/: __init__.py  runner.py
src/pingu/scenarios/: __init__.py  report.py  runner.py  spec.py
src/pingu/synthetic/: __init__.py  channels.py  noise.py  scenarios.py  signals.py
src/pingu/tdoa/: __init__.py  gcc.py  pair_manager.py  peak_interpolation.py  uncertainty.py
src/pingu/visualization/: __init__.py  convergence.py  correlation.py  map_plot.py  spectrogram.py
tests/: conftest.py  test_channelizer.py  test_classifier.py  test_detector.py  test_integrator.py  test_locator.py  test_pipeline_fixes.py  test_scenario_runner.py  test_synthetic.py  test_tdoa.py
(+2 files in other folders)
