[project]
name = "pingu"
version = "0.1.0"
description = "HF TDoA Geolocation Pipeline"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "torch>=2.2",
    "pytorch-lightning>=2.2",
    "scikit-learn>=1.4",
    "omegaconf>=2.3",
    "pyyaml>=6.0",
    "matplotlib>=3.8",
    "rich>=13.7",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff>=0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pingu"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"
